--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Nobile:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Krona+One&family=Nobile:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+h1,
+h2,
+h3 {
+    font-family: "Krona One", sans-serif;
+}
+
+body {
+    font-family: "Inter", sans-serif;
+}
